--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- 번호 입력 + 버튼 -->
     <div class="menu">
         <input id="input-box" type="text" placeholder ="원하는 로또 번호 개수 입력" onfocus="this.placeholder=''">
-        <button id="lotto-btn" type="submit">확인</button>
+        <button id="lotto-btn" type="submit">클릭</button>
     </div>
     <!-- 로또번호 출력 -->
     <div id="result" class="balls-list"></div>
